contact is ok and I have to deploy more exception types

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "autoload": {
         "psr-4" : {
             "Controller\\" : "controllers/",
-            "Model\\" : "models/"
+            "Model\\" : "models/",
+            "Helper\\" : "helpers/",
+            "Exception\\" : "exceptions"
         }
     },
     "require": {
