site with back and front

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
             "Controller\\" : "controllers/",
             "Model\\" : "models/",
             "Helper\\" : "helpers/",
-            "Exception\\" : "exceptions"
+            "Exception\\" : "exceptions",
+            "Template\\" : "views/template/"
         }
     },
     "require": {
-        "altorouter/altorouter": "^2.0"
+        "altorouter/altorouter": "^2.0",
+        "phpmailer/phpmailer": "^6.1"
     }
 }
