--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "psr-4" : {
             "Controller\\" : "controllers/common/",
             "Controller\\Admin\\" : "controllers/administration/",
+            "Controller\\API\\" : "controllers/api/",
             "Model\\" : "models/",
             "Helper\\" : "helpers/",
             "Exception\\" : "exceptions",
